add hero section

--- a/src/app/style.pcss
+++ b/src/app/style.pcss
@@ -1,5 +1,27 @@
+/* stylelint-disable custom-property-pattern */
+
 * {
 	padding: 0;
 	margin: 0;
 	border: none;
 }
+
+:root {
+	--text-color-blue1: rgba(31, 63, 104, 1);
+	--text-color-blue2: rgba(49, 96, 153, 1);
+	--bg-color-blue4: rgba(90, 152, 208, 1);
+}
+
+@font-face {
+    font-family: "Gilroy rg";
+    src: url('/fonts/Gilroy-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+/* @font-face {
+	font-family: "Galien rg";
+	src: url('/fonts/Galien Regular.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
+} */
