--- a/src/shared/ui/button/style.pcss
+++ b/src/shared/ui/button/style.pcss
@@ -1,10 +1,12 @@
+/* stylelint-disable custom-property-pattern */
+
 button {
     margin: 0;
     width: 220px;
     height: 56px;
     border-radius: 10px;
     border: none;
-    background-color:  rgba(90, 152, 208, 1);
+    background-color:  var(--bg-color-blue4);
     box-shadow: 5px 10px 20px 0 rgba(53, 110, 173, 0.2);
     transition: background 0.25s;
     cursor: pointer;
@@ -13,16 +15,18 @@ button {
     align-items: center;
 
     span {
+        font-family: "Gilroy rg", sans-serif;
         color: rgba(255, 255, 255, 1);
         font-size: 16px;
         line-height: 26px;
+        letter-spacing: .04em;
     }
 }
 
 button:hover {
-    background-color: #4684D0;
+    background-color: var(--text-color-blue2);
 }
 
 button:active {
-    background-color: #3270D0;
+    background-color: var(--text-color-blue1);
 }
