--- a/src/entities/card/style.pcss
+++ b/src/entities/card/style.pcss
@@ -1,8 +1,50 @@
+/* stylelint-disable custom-property-pattern */
+
 .card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 380px;
     height: 525px;
+    box-sizing: border-box;
     flex-shrink: 0;
     border-radius: 10px;
     background: #FFF;
     box-shadow: 5px 20px 50px 0 rgba(16, 112, 177, 0.20);
+    padding: 48px;
+
+    &__title {
+        margin-bottom: 16px;
+    }
+
+    &__text {
+        color: var(--text-color-blue1);
+        font-family: "Gilroy rg", sans-serif;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 26px;
+        letter-spacing: .05em;
+        margin-bottom: 32px;
+    }
+
+    &__link {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        align-items: center;
+        color: var(--bg-color-blue4);
+        font-family: "Gilroy rg", sans-serif;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 30px;
+        letter-spacing: .05em;
+        text-decoration: none;
+
+        img {
+            height: 24px;
+            padding-left: 24px;
+        }
+    }
 }
