--- a/src/pages/index/style.pcss
+++ b/src/pages/index/style.pcss
@@ -15,9 +15,19 @@ h2 {
     font-size: 36px;
     font-style: normal;
     font-weight: 600;
-    line-height: 46px; /* 127.778% */
-    letter-spacing: 1.8px;
-    }
+    line-height: 46px;
+    letter-spacing: .05em;
+}
+
+h3 {
+    color: var(--text-color-blue1);
+    font-family: "Gilroy rg", sans-serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 30px;
+    letter-spacing: .05em;
+}
 
 p {
     color: var(--text-color-blue1);
@@ -82,9 +92,155 @@ p {
 }
 
 .assist {
-    margin-top: 180px;
+    margin-top: 192px;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 100px;
+
+    &__leftSide {
+
+        h2 {
+            position: relative;
+            left: -80px;
+            margin-bottom: 158px;
+            max-width: 359px;
+        }
+
+        .card {
+
+            &__image {
+                max-height: 132px;
+                margin-right: 76px;
+                margin-bottom: 56px;
+            }
+        }
+    }
+
+    &__rightSide { 
+
+        > :first-child {
+
+            > :first-child {
+                position: relative;
+                top: -71px;
+                max-height: 208px;
+                margin-bottom: 51px;
+            }
+
+            > :last-child {
+                position: relative;
+                top: -71px;
+            }
+        }
+
+        > :last-child {
+            margin-top: 100px;
+        
+            > :first-child {
+                max-height: 132px;
+                margin-right: 40px;
+                margin-bottom: 55px;
+            }
+        }
+    }
+}
+
+.client {
+    margin-top: 212px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    border-radius: 200px 0 0 0;
+    background: var(--bg-color-blue4);
+    width: 100%;
+    box-sizing: border-box;
+    padding-top: 96px;
+
+    &__container {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    &__title {
+        display: flex;
+        flex-direction: row;
+        gap: 97px;
+
+
+        h2 {
+            color: white;
+            max-width: 223px;
+        }
+
+        p {
+            color: white;
+            max-width: 540px;
+        }
+    }
+
+}
+
+.logoClients {
+    margin-top: 111px;
+    margin-bottom: 125px;
+    display: grid;
+    grid-template-rows: 128px 128px;
+    grid-template-columns: 235px 235px 235px 235px;
+    border-collapse: collapse;
+
+    &__item {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-collapse: collapse;
+
+        p {
+            z-index: 2;
+            color: white;
+            font-family: "Gilroy rg", sans-serif;
+            font-size: 20px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 46px;
+            letter-spacing: .02em;
+            opacity: 1;
+        }
+    }
+
+    &__moreClients {
+        z-index: 2;
+        grid-area: 2 / 4 / 2 / 4;
+        cursor: pointer;
+        transition: background 0.25s;
+        border-top: 1px solid white;
+        border-left: 1px solid white;
+    }
+
+    &__moreClients:hover {
+        background-color: var(--text-color-blue2);
+    }
+
+    > :nth-child(2n-1), > :nth-child(2), > :nth-child(6) {
+        border-right: 1px solid white;
+    }
+
+    > :nth-child(1), > :nth-child(2), > :nth-child(3), > :nth-child(4) {
+        border-bottom: 1px solid white;
+    }
+
+    > :last-child {
+        z-index: 1;
+        grid-area: 2 / 4 / 2 / 4;
+        opacity: 0.2;
+        background: var(--text-color-blue1);
+        border-right: none;
+        cursor: pointer;
+    }
+
 }
