--- a/src/app/style.pcss
+++ b/src/app/style.pcss
@@ -7,9 +7,10 @@
 }
 
 :root {
-	--text-color-blue1: rgba(31, 63, 104, 1);
-	--text-color-blue2: rgba(49, 96, 153, 1);
-	--bg-color-blue4: rgba(90, 152, 208, 1);
+	--color-blue1: rgba(31, 63, 104, 1);
+	--color-blue2: rgba(49, 96, 153, 1);
+	--color-blue3: rgba(53, 110, 173, 1);
+	--color-blue4: rgba(90, 152, 208, 1);
 }
 
 @font-face {
