--- a/src/shared/ui/button/style.pcss
+++ b/src/shared/ui/button/style.pcss
@@ -6,7 +6,7 @@ button {
     height: 56px;
     border-radius: 10px;
     border: none;
-    background-color:  var(--bg-color-blue4);
+    background-color:  var(--color-blue4);
     box-shadow: 5px 10px 20px 0 rgba(53, 110, 173, 0.2);
     transition: background 0.25s;
     cursor: pointer;
@@ -24,9 +24,9 @@ button {
 }
 
 button:hover {
-    background-color: var(--text-color-blue2);
+    background-color: var(--color-blue2);
 }
 
 button:active {
-    background-color: var(--text-color-blue1);
+    background-color: var(--color-blue1);
 }
