--- a/src/entities/card/style.pcss
+++ b/src/entities/card/style.pcss
@@ -18,7 +18,7 @@
     }
 
     &__text {
-        color: var(--text-color-blue1);
+        color: var(--color-blue1);
         font-family: "Gilroy rg", sans-serif;
         font-size: 16px;
         font-style: normal;
@@ -33,7 +33,7 @@
         flex-direction: row;
         flex-wrap: nowrap;
         align-items: center;
-        color: var(--bg-color-blue4);
+        color: var(--color-blue4);
         font-family: "Gilroy rg", sans-serif;
         font-size: 14px;
         font-style: normal;
