--- a/src/pages/index/style.pcss
+++ b/src/pages/index/style.pcss
@@ -1,7 +1,7 @@
 /* stylelint-disable custom-property-pattern */
 
 h1 {
-    color: var(--text-color-blue1);
+    color: var(--color-blue1);
     font-family: serif;
     font-size: 64px;
     line-height: 74px;
@@ -10,7 +10,7 @@ h1 {
 }
 
 h2 {
-    color: var(--text-color-blue2);
+    color: var(--color-blue2);
     font-family: "Gilroy rg", sans-serif;
     font-size: 36px;
     font-style: normal;
@@ -20,7 +20,7 @@ h2 {
 }
 
 h3 {
-    color: var(--text-color-blue1);
+    color: var(--color-blue1);
     font-family: "Gilroy rg", sans-serif;
     font-size: 20px;
     font-style: normal;
@@ -30,7 +30,7 @@ h3 {
 }
 
 p {
-    color: var(--text-color-blue1);
+    color: var(--color-blue1);
     font-family: "Gilroy rg", sans-serif;
     font-size: 16px;
     line-height: 26px;
@@ -154,7 +154,7 @@ p {
     justify-content: flex-start;
     align-items: center;
     border-radius: 200px 0 0 0;
-    background: var(--bg-color-blue4);
+    background: var(--color-blue4);
     width: 100%;
     box-sizing: border-box;
     padding-top: 96px;
@@ -223,7 +223,7 @@ p {
     }
 
     &__moreClients:hover {
-        background-color: var(--text-color-blue2);
+        background-color: var(--color-blue2);
     }
 
     > :nth-child(2n-1), > :nth-child(2), > :nth-child(6) {
@@ -238,7 +238,7 @@ p {
         z-index: 1;
         grid-area: 2 / 4 / 2 / 4;
         opacity: 0.2;
-        background: var(--text-color-blue1);
+        background: var(--color-blue1);
         border-right: none;
         cursor: pointer;
     }
