--- a/src/entities/modalForm/style.pcss
+++ b/src/entities/modalForm/style.pcss
@@ -1,10 +1,12 @@
+/* stylelint-disable custom-property-pattern */
+
 .modalForm {
     width: 540px;
     height: 800px;
-    display: none;
+    display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: flex-start;
     gap: 48px;
     padding: 56px;
     box-sizing: border-box;
@@ -20,11 +22,61 @@
     justify-self: center;
     opacity: 1;
 
+    h3 {
+        letter-spacing: .04em;
+    }
+
     form {
+        width: 100%;
         display: flex;
         flex-direction: column;
-        align-items: center;
-        gap: 32px;
+        align-items: flex-start;
+        gap: 8px;
+
+        label {
+            color: var(--color-blue1);
+            font-family: "Gilroy rg", sans-serif;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 30px;
+            letter-spacing: .04em;
+            opacity: .8;
+        }
+
+        input, textarea {
+            border-radius: 10px;
+            border: 1px solid var(--color-blue3);
+            padding: 21px 36px;
+            box-sizing: border-box;
+            opacity: .4;
+            width: 100%;
+            margin-bottom: 24px;
+            color: var(--color-blue1);
+            font-family: "Gilroy rg", sans-serif;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 300;
+            line-height: 30px;
+            letter-spacing: .04em;
+            resize: none;
+        }
+
+        input:focus {
+            opacity: 1;
+            border: 1px solid var(--color-blue3);
+        }
+
+    }
+
+    form > :last-child {
+        width: 100%;
+        height: 144px;
+    }
+
+    button {
+        width: 100%;
+        height: 72px;
     }
 }
 
