add small modal window

--- a/src/entities/modalForm/style.pcss
+++ b/src/entities/modalForm/style.pcss
@@ -3,7 +3,7 @@
 .modalForm {
     width: 540px;
     height: 800px;
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
@@ -78,6 +78,15 @@
         width: 100%;
         height: 72px;
     }
+
+    img {
+        color: var(--color-blue1);
+        cursor: pointer;
+        position: absolute;
+        right: 56px;
+        top: 59px;
+    }
+    
 }
 
 .modalForm.active {
