--- a/src/entities/card/style.pcss
+++ b/src/entities/card/style.pcss
@@ -1,3 +1,4 @@
+/* stylelint-disable media-feature-range-notation */
 /* stylelint-disable custom-property-pattern */
 
 .card {
@@ -23,7 +24,7 @@
         font-size: 16px;
         font-style: normal;
         font-weight: 400;
-        line-height: 26px;
+        line-height: 1.625;
         letter-spacing: .05em;
         margin-bottom: 32px;
     }
@@ -38,7 +39,7 @@
         font-size: 14px;
         font-style: normal;
         font-weight: 600;
-        line-height: 30px;
+        line-height: 2.1429;
         letter-spacing: .05em;
         text-decoration: none;
 
@@ -46,5 +47,12 @@
             height: 24px;
             padding-left: 24px;
         }
+    }
+}
+
+@media (max-width: 1280px) {
+    
+    .card {
+        width: 360px;
     }
 }
