--- a/src/entities/modalForm/style.pcss
+++ b/src/entities/modalForm/style.pcss
@@ -39,7 +39,7 @@
             font-size: 16px;
             font-style: normal;
             font-weight: 400;
-            line-height: 30px;
+            line-height: 1.875;
             letter-spacing: .04em;
             opacity: .8;
         }
@@ -57,7 +57,7 @@
             font-size: 16px;
             font-style: normal;
             font-weight: 300;
-            line-height: 30px;
+            line-height: 1.875;
             letter-spacing: .04em;
             resize: none;
         }
