--- a/src/shared/ui/navigation/style.pcss
+++ b/src/shared/ui/navigation/style.pcss
@@ -1,3 +1,5 @@
+/* stylelint-disable media-feature-range-notation */
+
 nav {
     width: 1200px;
     height: 48px;
@@ -9,5 +11,20 @@ nav {
 
     img {
         cursor: pointer;
+    }
+}
+
+@media (max-width: 1280px) {
+    
+    .nav {
+        width: 85vw;
+    }
+}
+
+@media (max-width: 1024px) {
+
+    .nav {
+        margin: 30px 0 15px 0;
+
     }
 }
