complete responsive(adaptive) design

--- a/src/entities/card/style.pcss
+++ b/src/entities/card/style.pcss
@@ -56,3 +56,41 @@
         width: 360px;
     }
 }
+
+@media (max-width: 1024px) {
+
+    .card {
+        width: 300px;
+        height: 509px;
+        padding: 35px;
+
+        &__image {
+            margin-bottom: 50px;
+        }
+
+        &__text {
+            font-size: 15px;
+        }
+
+        &__link {
+            font-size: 13px;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+
+    .card {
+
+        &__text {
+            font-size: 14px;
+        }
+    }
+}
+
+@media (max-width: 480px)  {
+
+    .card {
+        width: 280px;
+    }
+}
