--- a/src/shared/ui/button/style.pcss
+++ b/src/shared/ui/button/style.pcss
@@ -43,3 +43,15 @@ button:active {
         }
     }
 }
+
+@media (max-width: 768px) {
+
+    button {
+        width: 180px;
+        height: 48px;
+
+        span {
+            font-size: 14px;
+        }
+    }
+}
