--- a/src/shared/ui/navigation/style.pcss
+++ b/src/shared/ui/navigation/style.pcss
@@ -12,6 +12,10 @@ nav {
     img {
         cursor: pointer;
     }
+
+    a {
+        height: 48px;
+    }
 }
 
 @media (max-width: 1280px) {
@@ -26,5 +30,12 @@ nav {
     .nav {
         margin: 30px 0 15px 0;
 
+    }
+}
+
+@media (max-width: 768px) {
+
+    .nav {
+        margin: 30px 0 30px 0;
     }
 }
