--- a/src/widgets/footer/style.pcss
+++ b/src/widgets/footer/style.pcss
@@ -182,3 +182,182 @@
         }
     }
 }
+
+@media (max-width: 1024px) {
+
+    .footer {
+        margin-right: 56px;
+        width: calc(100% - 56px);
+        gap: 66px;
+        padding: 61px 0 44px 0;
+        border-radius: 0 180px 0 0;
+
+        &__title {
+            gap: 50px;
+        }
+
+        &__textBlock {
+            width: 305px;
+            gap: 24px;
+
+            p {
+                width: 400px;
+            }
+        }
+
+        &__main {
+            gap: 44px;
+            width: 610px;
+
+            a {
+                font-size: 15px;
+            }
+
+            p {
+                font-size: 15px;
+            }
+        }
+
+        &__subTitle {
+            margin-bottom: 12px;
+        }
+
+        &__subTitle > a:not(:first-child) h3 {
+            font-size: 22px;
+        }
+
+        &__info {
+            width: 610px;
+        }
+
+        &__contacts {
+            margin-right: 40px;
+            gap: 20px;
+
+            > :first-child {
+                margin-bottom: 3px;
+            }
+        }
+
+        &__about {
+            margin-right: 30px;
+            gap: 13px;
+        }
+
+        &__follow {
+            gap: 13px;
+        }
+
+        &__text :last-child {
+            font-size: 15px;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+
+    .footer {
+        margin-right: 36px;
+        padding: 50px 0 40px 0;
+        width: calc(100% - 36px);
+        gap: 46px;
+        border-radius: 0 140px 0 0;
+
+        &__title {
+            flex-direction: column;
+            gap: 30px;
+        }
+
+        &__textBlock {
+            gap: 20px;
+
+            p {
+                width: 310px;
+            }
+        }
+
+        &__main {
+            gap: 30px;
+            width: 300px;
+
+            p {
+                font-size: 14px;
+            }
+        }
+
+        &__info {
+            flex-direction: column;
+            width: 300px;
+            gap: 25px;
+        }
+
+        &__subTitle {
+            margin-bottom: 0;
+
+            > a:not(:first-child) h3 {
+                font-size: 20px;
+            }
+        }
+
+        &__text {
+            gap: 10px;
+
+            > :last-child {
+                font-size: 14px;
+            }
+        }
+
+        &__contacts {
+            margin-right: 0;
+            gap: 12px;
+
+            > :first-child {
+                margin-bottom: 0;
+            }
+        }
+
+        &__about {
+            gap: 8px;
+            margin-right: 0;
+        }
+
+        &__follow {
+            gap: 8px;
+        }
+    }
+}
+
+@media (max-width: 480px) {
+
+    .footer {
+        margin-right: 35px;
+        padding: 30px 0 30px 0;
+        width: calc(100% - 35px);
+        gap: 35px;
+        border-radius: 0 100px 0 0;
+
+        &__title {
+            gap: 25px;
+        }
+
+        &__textBlock {
+            max-width: 280px;
+
+            h2 {
+                max-width: 100%;
+            }
+
+            p {
+                max-width: 100%;
+            }
+        }
+
+        &__main {
+            max-width: 255px;
+        }
+
+        &__info {
+            max-width: 255px;
+        }
+    }
+}
