complete validation feature

--- a/src/entities/modalForm/style.pcss
+++ b/src/entities/modalForm/style.pcss
@@ -3,7 +3,7 @@
 
 .modalForm {
     width: 540px;
-    height: 800px;
+    height: auto;
     display: none;
     flex-direction: column;
     align-items: flex-start;
