--- a/src/entities/modalSuccess/style.pcss
+++ b/src/entities/modalSuccess/style.pcss
@@ -2,8 +2,8 @@
 /* stylelint-disable custom-property-pattern */
 
 .modalSuccess {
-    width: 30%;
-    height: 30%;
+    width: 600px;
+    height: 300px;
     display: none;
     align-items: center;
     justify-content: center;
