--- a/src/app/style.pcss
+++ b/src/app/style.pcss
@@ -16,7 +16,7 @@
 
 @font-face {
     font-family: "Gilroy rg";
-    src: url('/fonts/Gilroy-Regular.woff') format('woff');
+    src: url('../fonts/Gilroy-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
